[FIX] nav z-index

--- a/src/styles/Nav.module.scss
+++ b/src/styles/Nav.module.scss
@@ -7,7 +7,7 @@
     height: 3em;
     padding: 0 5em;
     position: fixed;
-    z-index: 1;
+    z-index: 999;
     background-color: rgba($color: $bg-color, $alpha: .98);
     transition: all .5s ease-out;
 
